--- a/user-interface/src/components/navbar.css
+++ b/user-interface/src/components/navbar.css
@@ -7,6 +7,17 @@
 
 .toolbar {
     display: flex;
-    background-color: #6200ea;
+    background-color: #035826;
     justify-content: space-between;
+}
+
+.icon {
+    width: 50px;
+    margin: 0.5rem 1rem 0.5rem 0rem;
+}
+
+.logo {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
