--- a/user-interface/src/index.css
+++ b/user-interface/src/index.css
@@ -1,14 +1,18 @@
 body {
   font-family: 'Roboto', sans-serif;
   background: linear-gradient(135deg, #ece9e6 0%, #ffffff 100%);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
   margin: 0;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
